# BHITL

./: .dockerignore  .env.sample  Dockerfile  backend.Dockerfile  docker-compose.yml  initial_data2.py  pyproject.toml
app/: initial_data2.py  initial_users.py  models.py
app/alembic/versions/: 6c13cece6af7_new_migration.py  e2c1a9065a5c_new_migration.py
app/api/: main.py
app/api/routes/: login.py  principles.py  samples.py  users.py
app/core/: config.py
scripts/: prestart.sh
