[project]
name = "hitlb"
version = "0.1.0"
description = ""
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "email-validator (>=2.3.0,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "emails (>=0.6,<0.7)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sentry-sdk[fastapi] (>=2.48.0,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.45,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "rsa (>=4.9.1,<5.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "pwdlib[bcrypt] (>=0.3.0,<0.4.0)",
    "slowapi (>=0.1.9,<0.2.0)"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
